commit made by freeve4h

--- a/home.html
+++ b/home.html
@@ -1,4 +1,3 @@
-<!--i hate html-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -24,6 +23,7 @@
             <h1 id="thankshow">HAPPY THANKSGIVING</h1>
             <h1 id="newyear">HAPPY NEW YEAR!!!!!!!!!!!!!!!!!!!!!!!!!!!</h1>
             <h1 id="sysadmin">HAPPY SYSADMIN DAY!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!</h1>
+            <h1 id="newyeareve">last day of the year...</h1>
             <script src="./checkdate.js"></script>
             <h1>WELCOME TO MY WEBSITE!!!</h1>
             <p>where your dreams come true*</p>
