commit made by freeve4h

--- a/home.html
+++ b/home.html
@@ -15,6 +15,12 @@
         <title>Freeve4h's website</title>
         <link rel="icon" type="images/x-icon" href="./images/favicon.png">
         <link rel="stylesheet" href="head.css">
+        <script>
+            function monero() {
+                navigator.clipboard.writeText("4Aa23Sf5gf4K2M8hC7MJnJiAZjF943oS28XWcKZpmt1SLzuzWXH5nnUgFmV7JGn6vVgLwMB9B62UxYJym95LmrLSUMA1XAC");
+                alert("copied!")
+            }
+        </script>
     </head>
     <body>
         <div class="mainDiv">
@@ -34,6 +40,8 @@
                 <h2>TIP</h2>
                 <p>on the bottom of each page you will see links to a different part of the site</p>
             </div>
+            <hr>
+            <button onclick="monero()">donate via monero (click to copy address)</button>
         </div>
         <p style="color: #111111">*not really</p>
         <pre></pre>
