commit made by freeve4h

--- a/home.html
+++ b/home.html
@@ -41,6 +41,7 @@
                 <p>on the bottom of each page you will see links to a different part of the site</p>
             </div>
             <hr>
+            <h1>DONATE</h1>
             <button onclick="monero()">donate via monero (click to copy address)</button>
         </div>
         <p style="color: #111111">*not really</p>
@@ -50,7 +51,6 @@
                 <p><code><a href="home.html">home</a></code></p>
                 <p><code><a href="links.html">links</a></code></p>
                 <p><code><a href="downloads/downloads.html">downloads</a></code></p>
-                <button onclick="$('#Games').toggle(); $('#Games2').toggle();">MY GAMES</button>
                 <p id="Games"><code><a href="getting-to-the-goal.html">getting to the goal</a></code></p>
                 <p id="Games2"><code><a href="beyond-the-rize.html">beyond the rize</a></code></p>
                 <pre></pre>
