commit made by freeve4h

--- a/home.html
+++ b/home.html
@@ -17,8 +17,9 @@
         <link rel="stylesheet" href="head.css">
         <script>
             function monero() {
-                navigator.clipboard.writeText("4Aa23Sf5gf4K2M8hC7MJnJiAZjF943oS28XWcKZpmt1SLzuzWXH5nnUgFmV7JGn6vVgLwMB9B62UxYJym95LmrLSUMA1XAC");
-                alert("copied!")
+                //navigator.clipboard.writeText("4Aa23Sf5gf4K2M8hC7MJnJiAZjF943oS28XWcKZpmt1SLzuzWXH5nnUgFmV7JGn6vVgLwMB9B62UxYJym95LmrLSUMA1XAC");
+                //alert("copied!")
+                alert("we are currently dealing with issues with the clipboard at this time, please copy 4Aa23Sf5gf4K2M8hC7MJnJiAZjF943oS28XWcKZpmt1SLzuzWXH5nnUgFmV7JGn6vVgLwMB9B62UxYJym95LmrLSUMA1XAC")
             }
         </script>
     </head>
