added link back to home page in gamescheck.html

--- a/games/gamescheck.html
+++ b/games/gamescheck.html
@@ -37,6 +37,7 @@
                 <script>$("#gameshide").hide();</script>
                 <button onclick="buttonclicked()">press this to confirm</button>
                 <p id="gameshide"><a href="./games.html">click here to go to games</a></p>
+                <p><a href="../home.html">home</a></p>
                 <script>$("#gameshide").hide();</script>
             </div>
         </div>
